# tdo

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: cli.rs  cli.yml  filesystem.rs  list.rs  macros.rs  main.rs  persistence.rs  storage.rs  subcommands.rs  todo.rs
