[package]
name = "tdo"
version = "0.0.1"
authors = ["Felix Wittwer <dev@felixwittwer.de>", "Felix Döring <mail@felixdoering.com>"]

[dependencies]
clap = {version = "2.19", features = ["yaml"]}
tdo_core = { git = 'https://github.com/tdolist/tdo_core' }
serde = "0.9.1"
serde_derive = "0.9.1"
serde_json = "0.9.1"
