[package]
name = "tdo"
version = "2.0.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>", "Felix Döring <development@felixdoering.com>"]
description = "A todo list tool for the terminal."

homepage = "https://tdolist.de/tdo"
repository = "https://github.com/tdolist/tdo-rs"

license = "MIT"
keywords = ["todo", "tdo", "tdolist", "terminal"]
readme = "README.md"

include = ["Cargo.toml", "Cargo.lock", "src/*"]

[[bin]]
name = "tdo"
path = "src/main.rs"

[dependencies]
clap = {version = "2.23.1", features = ["yaml"]}
tdo-core = { git = "https://github.com/tdolist/tdo-core.git" } #"0.2.0"
tdo-export = { git = "https://github.com/tdolist/tdo-export.git" } #"0.2.0"
colored = "1.4"
