[package]
name = "tdo"
version = "2.2.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>", "Felix Döring <development@felixdoering.com>"]
description = "A todo list tool for the terminal."

homepage = "https://tdolist.de/tdo"
repository = "https://github.com/tdolist/tdo-rs"

license = "MIT"
keywords = ["todo", "tdo", "tdolist", "terminal"]
readme = "README.md"

include = ["Cargo.toml", "Cargo.lock", "src/*"]

[[bin]]
name = "tdo"
path = "src/main.rs"

[dependencies]
clap = {version = "2.23.1", features = ["yaml"]}
tdo-core = "0.2"
tdo-export = "0.2"
colored = "1.4"
